<resources>
    <string name="app_name">GlassHotelDemo</string>
    <string name="background">Background</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc">desc</string>
    <string name="room_289">ROOM 289</string>
    <string name="_05_11">05:11</string>
    <string name="pm">PM</string>
    <string name="data">March 25, 2022 | Friday</string>
    <string name="welcome_albert_yu">Welcome, Mr. Karlvin Ang&#160;</string>
    <string name="messages">MESSAGES</string>
    <string name="discount_offer">Discount Offer</string>
    <string name="thank_you">Thank you.</string>
    <string name="from">From,</string>
    <string name="back"><![CDATA[< BACK]]></string>
    <string name="amenities">AMENITIES</string>
    <string name="airmedia">AIRMEDIA</string>
    <string name="android">ANDROID</string>
    <string name="instruction">INSTRUCTION</string>
    <string name="ios">IOS</string>
    <string name="windows">WINDOWS</string>
    <string name="emergency">EMERGENCY BROADCAST</string>
    <string name="em">THIS IS A TEST OF EMERGENCY ALERT SYSTEM</string>
    <string name="android_ins"></string>
    <string name="connect">CONNECT</string>
    <string name="an">1. Tap on the Apps icon on your phone\'s Home screen.\n2. From the application list on your device, tap on Settings.\n3. In Settings, under Connect and Share, tap on Screen Mirroring.\n4. On the Screen Mirroring page, tap on the switch button to enable the feature.\n The switch will turn green to indicate it is on, and your phone will search for\n available devices (TV) within range.\n5. The available TV will now be displayed. Tap on the device\'s name to connect to it.\n6. Your phone\'s screen will now be displayed on your TV.\n</string>
    <string name="ios_ins">1. Go to Screen Mirroring Swipe down on your iPhone screen to access the Control Center and tap on Screen Mirroring, it\'s the button with two overlapping screens. This will bring up the available devices either nearby or on your network that you can share your screen with.\n2. Select your TV Tap on the TV where you want your iPhone screen to be mirrored. In this case, I selected my LG television. Your phone screen should now be visible on your TV, and you can use your phone to find the media you want to display.</string>
    <string name="win_ins">1. Open the Action Center and select Project.\n2. Select Connect to a wireless display.\n3. A scan for wireless display devices will start. Select your desired wireless display device.\n4. Once connected, your Windows 10 device should now be mirrored by the wireless display.</string>
</resources>